[package]
name = "zookeeper-rs"
version = "0.1.0"
authors = ["Rémy Saissy <remy.saissy@gmail.com>"]
description = "Rust implementation of Zookeeper."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0", features = ["derive"] }
serde = {version = "1.0", features = ["derive"] }
config = "0.11"
rustyline = "9.1.2"

[profile.dev]
debug = 0

[profile.test]
debug = 0